# PARCO-Computing-2026-244944

./: CMakeLists.txt  README.md  runirr.ps1  runirr.sh  runreg.ps1  runreg.sh  seqirr.ps1  src.c  src.cpp
D1-code/: custom_matrix.cpp  make_matrices.cpp  spmv_csr.cpp
D2-code/: spmv_mpi.cpp  strong_matrix.cpp
code/: custom_matrix.cpp  gen_matrix.cpp  make_matrices.cpp  mmio.c  mmio.h  spmv_csr.cpp
code/matrices/: irregular_zipf_50k.mtx  large_random.mtx  regular_tridiag_150k.mtx
mmio/: mmio.c
results/: spmv_mpi_results.tsv  spmv_mpi_results.txt  spmv_results.txt
script/: build.sh  cluster_info.sh  env.sh  runirr.ps1  runirr.sh  runreg.ps1  runreg.sh  seqirr.ps1  seqirr.sh  seqreg.ps1  seqreg.sh  spmv_job.pbs  spmv_mpi.pbs  spmv_mpi.sh  strong.pbs  strong.sh  strong_scaling.pbs  weak..pbs  weak.pbs  weak.sh  weak_scaling..pbs
src/: src.cpp
